// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`change button color 1`] = `
<Button
  color="blue"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onPress={[Function]}
  title="submit"
/>
`;

exports[`change button color 2`] = `
<Button
  color="green"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onPress={[Function]}
  title="submit"
/>
`;

exports[`change button color 3`] = `
<Button
  color="blue"
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
  onPress={[Function]}
  title="submit"
/>
`;
